# old-shadowircd

./: .gdb_history  .gitignore  .indent.pro  .ircd.entropy  BUGS  CHANGELOG  CREDITS  CVS-Access  ChangeLog  ChangeLog-Shadow  Doxyfile  HOWTO-CVS  Hybrid-team  INSTALL  LICENSE  Makefile  Makefile.in  README  README.FIRST  README.PLATFORMS  README.VMS  README.md  RELNOTES  Shadow-team  TODO  authormap  autogen.sh  blankserv.cpp  blankserv.h  chanserv.cpp  chanserv.h  clean.com  config.h  config.pl  configure  configure.ac  confmaker.pl  control.cpp  control.h  datastorage.cpp  (+39 more)
adns/: Makefile.in  adns.h  check.c  descrip.mms  dlist.h  event.c  general.c  internal.h  parse.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  configure.in  install-sh
conf/: .gitignore  channels.conf  ircd.conf.dist  ircd.ini  ircd.motd.dist  ircd.rules  ircd.smotd  kline.conf  vhost.conf
conf/networks/: openirc.network
contrib/: Makefile.in  README  alphacloak.c  challenge.irc  example_module.c  hybrid_services.c  m_capture.c  m_classdisable.c  m_classlist.c  m_clearchan.c  m_ctrace.c  m_flags.c  m_force.c  m_forcenick.c  m_help.c  m_intercept.c  m_jumpserver.c  m_jupe.c  m_killhost.c  m_ltrace.c  m_map.c  m_mkpasswd.c  m_ojoin.c  m_okick.c  m_olist.c  m_omode.c  m_omotd.c  m_operspy.c  m_opme.c  m_persist.c  m_svsnick.c  m_tburst.c  m_unkline.c  m_whois.c  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  (+5 more)
data/: networkbopm.conf
doc/: CIDR.txt  LazyLinks.txt  Makefile.in  RAW-NUMERICS.txt  README.cidr_bans  Shadow-team  challenge.txt  chanmodes.txt  channel_activity.txt  channels.txt  example.conf  example.efnet.conf  guidelines.txt  index.txt  ircd.8  ircd.motd  kline.txt  messages.txt  modeg.txt  modes.txt  old-Authors  olineflags  operguide.txt  opermyth.txt  prop.txt  resv.txt  s_hidehost.c  server-version-info  serverhide.txt  shadowircd-uid.txt  silence.txt  simple.conf  ts5.txt  ts6.txt  umodes.c  whats-new.txt
doc/Authors/: Hybrid-team
doc/authors/: Authors  Bahamut-team  Hybrid-team  IRC-Authors
doc/old/: example_old.conf  simple.conf
doc/technical/: Persistent_Clients.txt  README.TSora  README.openssl  cryptlink.txt  debug_api.txt  event.txt  fd-management.txt  file-management.txt  hostmask.txt  iauth.txt  index.txt  l_spec.txt  linebuf.txt  message-customisation.txt  network.txt  protoctl.txt  rfc1459.txt  send.txt  ts5.txt  ts6.txt  whats-new-code.txt
etc/: Makefile.in  badwords.conf  example.conf  example.conf.new  example.conf.quick  example.efnet.conf  simple.conf
help/: Makefile.in
help/hostserv/: index
help/opers/: dline  etrace  index  info  kline  motd  operspy  rehash  resv  set  squit  stats  umode  undline  ungline  unkline  unresv  unxline  version  xline
iauth/: BROKEN  Makefile.in
iauth/include/: auth.h  class.h  commands.h  conf.h  iauth.h  log.h  match.h  misc.h  mtree.h  res.h  setup.h  sock.h
iauth/source/: Makefile.in  auth.c  class.c  commands.c  conf.c  iauth.c  log.c  match.c  misc.c  mtree.c  res.c  sock.c
include/: .gitignore  Makefile.in  alloc.h  balloc.h  blalloc.h  cdefs.h  channel.h  channel_mode.h  chanserv.h  class.h  client.h  client_silence.h  cluster.h  common.h  conf.h  config.h  config.h.dist  config.h.in  control.h  dalloca.h  data.h  dbuf.h  dcc.h  defaults.h  defs.h  dh.h  dich_conf.h  dynconf.h  err.h  event.h  fdlist.h  fileio.h  find.h  flood.h  gline.h  global.h  h.h  handlers.h  hash.h  helpserv.h  (+91 more)
kageserv.pbproj/: eko.pbxuser  project.pbxproj
libopm/: Makefile  Makefile.in  compat.c  config.c  inet.c  libopm.c  list.c  malloc.c  malloc.h  opm.h  proxy.c  snprintf.c  test.c
messages/: Makefile  Makefile.in  README  ayb.lang  ayb.po  build_one  create_po  custom.po  fantasy.lang  ircd-croatian.lang  ircd-danish.lang  ircd-dutch.lang  ircd-french.lang  ircd-german.lang  ircd-norwegian.lang  ircd-polish.lang  ircd-russian.lang  ircd-spanish.lang  ircd-standard.example.lang  ircd-swedish.lang
messages/translations/: Makefile.in  README  ircd-croatian.po  ircd-danish.po  ircd-dutch.po  ircd-german.po  ircd-norwegian.po  ircd-spanish.po  ircd-swedish.po
modules/: .depend  Makefile.in  cloak.c  descrip.mms  m_accept.c  m_admin.c  m_away.c  m_capab.c  m_capture.c  m_cburst.c  m_challenge.c  m_classlist.c  m_clearchan.c  m_close.c  m_connect.c  m_cryptlink.c  m_ctrace.c  m_dccallow.c  m_dmem.c  m_drop.c  m_encap.c  m_eob.c  m_etrace.c  m_force.c  m_gline.c  m_grant.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_jupe.c  m_killhost.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_lljoin.c  m_llnick.c  m_locops.c  (+59 more)
modules/core/: descrip.mms  m_die.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_sjoin.c  (+1 more)
psuedo/: connect.rb  linktest.pl.txt
servlink/: Makefile.in  README  TODO  control.c  control.h  io.c  io.h  servlink.c  servlink.h
shadowdns/: character.c  comp.c  conversion.c  decode.c  encode.c  setup.c  util.c
source/: Makefile.in  alloc.c  channel.c  chanserv.c  client.c  conf.c  data.c  dcc.c  flood.c  gline.c  global.c  hash.c  helpserv.c  hostserv.c  hybserv.c  init.c  jupe.c  log.c  match.c  memoserv.c  misc.c  motd.c  mystring.c  nickserv.c  operserv.c  server.c  settings.c  show.c  sock.c  sprintf_irc.c  statserv.c  timer.c  timestr.c  version.c
src/: .depend  .gitignore  Doxyfile  Makefile.in  adns.c  badwords.c  balloc.c  blalloc.c  bsd.c  callbacks.c  channel.c  channel_filter.c  channel_mode.c  class.c  client.c  client_silence.c  cluster.c  conf.c  confp.c  crypt.c  csvlib.c  dbuf.c  descrip.mms  dh.c  dich_conf.c  drone.c  dynconf.c  dynlink.c  event.c  fdlist.c  fileio.c  function.c  getopt.c  hash.c  hook.c  hostmask.c  hostmasking.c  inet_addr.c  inet_misc.c  inet_ntop.c  (+84 more)
tools/: .gitignore  Makefile.in  README  README.mkpasswd  convertconf.c  convertilines.c  convertklines.c  descrip.mms  encryptconf.c  encryptdb.c  encspeed.c  ircdssl.cnf  mkkeypair  mkpasswd.c  mkpasswd_vms.c  sslsetup  sslsetup.in  untabify  viconf.c
(+28 files in other folders)
